--- a/FishTank/src/FishTank/project.json
+++ b/FishTank/src/FishTank/project.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final"
+    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
+    "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final"
   },
   "exclude": [
     "wwwroot",
